--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ body {font-family: "Lato", sans-serif;}
 
 <div id="London" class="tabcontent">
   <h1> Ganga Holi     You are here  MLOps along with AWS & Psitron</h1>
-  <p>Machine Learning operations (MLOps)</p>
+  <p> laerning    Ganga   Machine Learning operations (MLOps)</p>
 </div>
 
 <div id="Paris" class="tabcontent">
