--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ body {font-family: "Lato", sans-serif;}
 
 <div id="Paris" class="tabcontent">
   <h1>AWS MLOps Pipelines</h1>
-  <p>AWS Machine Learning operations.</p> 
+  <p>AWS Machine Learning operations   Gagana   agnag  ganga .</p> 
 </div>
 
 <div id="Tokyo" class="tabcontent">
