--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@ body {font-family: "Lato", sans-serif;}
 <p>Test app for AWS CodePipeline</p>
 
 <div id="London" class="tabcontent">
-  <h1> Ganga Holi      awssssss   You are here  MLOps along with AWS & Psitron</h1>
-  <p> laerning   *********   Ganga   Machine Learning operations (MLOps)</p>
+  <h1> Ganga Holi  You are here  MLOps along with AWS & Psitron</h1>
+  <p> Learning MLOPs  that is  Machine Learning operations (MLOps)</p>
 </div>
 
 <div id="Paris" class="tabcontent">
   <h1>AWS MLOps Pipelines</h1>
-  <p>AWS Machine Learning operations   Gagana   agnag  ganga .</p> 
+  <p>AWS Machine Learning operations  Using CI CD approach  .</p> 
 </div>
 
 <div id="Tokyo" class="tabcontent">
